// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`number input number input renders correctly 1`] = `
<input
  className="w-full py-3 font-mono text-center text-gray-700 bg-gray-100 border border-gray-200 rounded focus:bg-white focus:border-teal-400"
  name="name"
  placeholder="placeholder"
  required={true}
  type="number"
  value=""
/>
`;

exports[`text input renders correctly 1`] = `
<input
  className="w-full py-3 font-mono text-center text-gray-700 bg-gray-100 border border-gray-200 rounded focus:bg-white focus:border-teal-400"
  name="name"
  placeholder="placeholder"
  required={true}
  type="text"
  value=""
/>
`;
